# gnome-podcasts

./: .buildconfig  Makefile.am  README.md  configure.ac  gnome-podcasts.doap  org.gnome.Podcasts.json
data/: AboutDialog.ui.in  Makefile.am  app-menu.ui  application.css  gnome-podcasts.appdata.xml.in  gnome-podcasts.gresource.xml  org.gnome.Podcasts.desktop.in  org.gnome.Podcasts.gschema.xml
data/icons/: Makefile.am
data/ui/: headerbar.ui
gnomepodcasts/: Makefile.am  __init__.py  application.py  notification.py  toolbar.py  tracker.py  window.py
po/: Makevars  POTFILES.in  fr.po
